force-app/main/default/objects/NCMT_DES_Items__c/NCMT_DES_Items__c.object-meta.xml
<CustomObject>
    <label>NCMT DES Item</label>
    <nameField>
        <displayFormat>DI-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCMT DES Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>