force-app/main/default/objects/NCMT_DES_Items__c/fields/Adj_Labor_Hours__c.field-meta.xml
<CustomField>
    <fullName>Adj_Labor_Hours__c</fullName>
    <formula>Labor_Hours__c * (1+  Difficulty_Factor_Percent__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adj Labor Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>