force-app/main/default/objects/NCMT_DES_Items__c/fields/Adj_Labor_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Adj_Labor_Unit_Cost__c</fullName>
    <formula>Hourly_Rate__c *(1+ Difficulty_Factor_Percent__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adj Labor Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>