force-app/main/default/objects/NCMT_DES_Items__c/fields/Assembly_SKey__c.field-meta.xml
<CustomField>
    <fullName>Assembly_SKey__c</fullName>
    <formula>NCMT_Assembly_Master__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assembly SKey</label>
    <type>Text</type>
</CustomField>