force-app/main/default/objects/NCMT_DES_Items__c/fields/Cost_Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Category_Type__c</fullName>
    <formula>Project_Cost_Summary_ID__r.Cost_Category_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Category Type</label>
    <type>Text</type>
</CustomField>