force-app/main/default/objects/NCMT_DES_Items__c/fields/Cost_Summary__c.field-meta.xml
<CustomField>
    <fullName>Cost_Summary__c</fullName>
    <formula>Project_Cost_Summary_ID__r.Cost_Category_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Category Description</label>
    <type>Text</type>
</CustomField>