force-app/main/default/objects/NCMT_DES_Items__c/fields/CSI_Line_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>CSI_Line_Item_Number__c</fullName>
    <label>Line Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>