force-app/main/default/objects/NCMT_DES_Items__c/fields/Default_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Default_Hourly_Rate__c</fullName>
    <formula>DES_Lookup_Detail__r.Hourly_Rate_txt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Hourly Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>