force-app/main/default/objects/NCMT_DES_Items__c/fields/Default_Material_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Default_Material_Unit_Cost__c</fullName>
    <formula>DES_Lookup_Detail__r.Material_Unit_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Material Unit Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>