force-app/main/default/objects/NCMT_DES_Items__c/fields/DES_Lookup_Detail__c.field-meta.xml
<CustomField>
    <fullName>DES_Lookup_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DES Lookup Detail</label>
    <referenceTo>NCMT_DES_Lookup_details__c</referenceTo>
    <relationshipLabel>NCMT DES Items</relationshipLabel>
    <relationshipName>NCMT_DES_Items</relationshipName>
    <type>Lookup</type>
</CustomField>