force-app/main/default/objects/NCMT_DES_Items__c/fields/Difficulty_Factor_Percent__c.field-meta.xml
<CustomField>
    <fullName>Difficulty_Factor_Percent__c</fullName>
    <label>Difficulty Factor %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>