force-app/main/default/objects/NCMT_DES_Items__c/fields/Direct_Cost__c.field-meta.xml
<CustomField>
    <fullName>Direct_Cost__c</fullName>
    <formula>(Hourly_Rate__c +  Equipment_Rental_Day__c +  Material_Unit_Cost__c)* Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Item Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>