force-app/main/default/objects/NCMT_DES_Items__c/fields/Equipment_Assembly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Assembly_Cost__c</fullName>
    <label>Assembly Equipment Cost/Unit</label>
    <summarizedField>NCMT_DES_Assembly_Details__c.Equipment_Unit_Cost_per_Quantity__c</summarizedField>
    <summaryForeignKey>NCMT_DES_Assembly_Details__c.NCMT_DES_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>