force-app/main/default/objects/NCMT_DES_Items__c/fields/Equipment_Rental_Day__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Rental_Day__c</fullName>
    <label>Equipment Unit Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>