force-app/main/default/objects/NCMT_DES_Items__c/fields/Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy__c</fullName>
    <formula>Level_2_Description__c + &apos;--&gt;&apos; +  Level_3_Description__c + &apos;--&gt;&apos; +  Level_4_Description__c + &apos;--&gt;&apos; +  Level_5_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hierarchy</label>
    <type>Text</type>
</CustomField>