force-app/main/default/objects/NCMT_DES_Items__c/fields/In_house_Unit_Total_Adj__c.field-meta.xml
<CustomField>
    <fullName>In_house_Unit_Total_Adj__c</fullName>
    <formula>IF(Item_Type__c ==&apos;Assemblies&apos;, Total_In_House_Total_Adj_f__c,

In_house_Unit_Total__c * Quantity__c * Location_Multiplier_wf__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Total Adj</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>