force-app/main/default/objects/NCMT_DES_Items__c/fields/In_house_Unit_Total_f__c.field-meta.xml
<CustomField>
    <fullName>In_house_Unit_Total_f__c</fullName>
    <formula>Labor_Assembly_Cost__c +  Material_Assembly_Cost__c +  Equipment_Assembly_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In-house Unit Total</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>