force-app/main/default/objects/NCMT_DES_Items__c/fields/Include_In_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Estimate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include In Estimate</label>
    <type>Checkbox</type>
</CustomField>