force-app/main/default/objects/NCMT_DES_Items__c/fields/Include_Location_Factor__c.field-meta.xml
<CustomField>
    <fullName>Include_Location_Factor__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If you uncheck this it applies the National Average which is 1.0.</inlineHelpText>
    <label>Apply Location Factor</label>
    <type>Checkbox</type>
</CustomField>