force-app/main/default/objects/NCMT_DES_Items__c/fields/Installation_Assembly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Installation_Assembly_Cost__c</fullName>
    <formula>Total_Equipment_Cost_w_Sales_Tax__c +   Total_Labor_Cost_w_Labor_Burden_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation Cost w. Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>