force-app/main/default/objects/NCMT_DES_Items__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <label>Item Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>