force-app/main/default/objects/NCMT_DES_Items__c/fields/Labor_Assembly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Labor_Assembly_Cost__c</fullName>
    <label>Assembly Labor Cost/Unit</label>
    <summarizedField>NCMT_DES_Assembly_Details__c.Labor_Unit_Cost_per_Quantity__c</summarizedField>
    <summaryForeignKey>NCMT_DES_Assembly_Details__c.NCMT_DES_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>