force-app/main/default/objects/NCMT_DES_Items__c/fields/Labor_Burden_Impact_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Labor_Burden_Impact_Rollup__c</fullName>
    <label>Labor Burden Impact</label>
    <summarizedField>NCMT_DES_Assembly_Details__c.Labor_Burden_Impact__c</summarizedField>
    <summaryForeignKey>NCMT_DES_Assembly_Details__c.NCMT_DES_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>