force-app/main/default/objects/NCMT_DES_Items__c/fields/Labor_Burden_Tax__c.field-meta.xml
<CustomField>
    <fullName>Labor_Burden_Tax__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>An allowance representing the cost associated with employees benefits, workers compensation insurance, unemployment tax, etc.</inlineHelpText>
    <label>Labor Burden %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>