force-app/main/default/objects/NCMT_DES_Items__c/fields/Labor_Burden_Tax_f__c.field-meta.xml
<CustomField>
    <fullName>Labor_Burden_Tax_f__c</fullName>
    <formula>IF(Labor_Assembly_Cost__c &gt; 0 ,Labor_Burden_Impact_Rollup__c/Labor_Assembly_Cost__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Labor Burden Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>