force-app/main/default/objects/NCMT_DES_Items__c/fields/Labor_Cost__c.field-meta.xml
<CustomField>
    <fullName>Labor_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Labor Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>