force-app/main/default/objects/NCMT_DES_Items__c/fields/Labor_Hours__c.field-meta.xml
<CustomField>
    <fullName>Labor_Hours__c</fullName>
    <label>Labor Hours</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>