force-app/main/default/objects/NCMT_DES_Items__c/fields/Labor_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Labor_Subtotal__c</fullName>
    <description>Labor Subtotal</description>
    <formula>Hourly_Rate__c *  Quantity__c * Location_Multiplier_wf__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Labor Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>