force-app/main/default/objects/NCMT_DES_Items__c/fields/Level_2__c.field-meta.xml
<CustomField>
    <fullName>Level_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Level 2</label>
    <referenceTo>NCMT_Cost_Category__c</referenceTo>
    <relationshipLabel>NCMT DES Items</relationshipLabel>
    <relationshipName>NCMT_DES_Items</relationshipName>
    <type>Lookup</type>
</CustomField>