force-app/main/default/objects/NCMT_DES_Items__c/fields/Level_2_Description__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Description__c</fullName>
    <label>Level 2 Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>