force-app/main/default/objects/NCMT_DES_Items__c/fields/Level_4__c.field-meta.xml
<CustomField>
    <fullName>Level_4__c</fullName>
    <label>Level 4</label>
    <length>30</length>
    <type>Text</type>
</CustomField>