force-app/main/default/objects/NCMT_DES_Items__c/fields/Line_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Number__c</fullName>
    <formula>IF(Item_Type__c ==&apos;Assemblies&apos;, NCMT_Assembly_Master__r.Assembly_Number__c , DES_Lookup_Detail__r.Line_Item_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Number</label>
    <type>Text</type>
</CustomField>