force-app/main/default/objects/NCMT_DES_Items__c/fields/Location_Multiplier_f__c.field-meta.xml
<CustomField>
    <fullName>Location_Multiplier_f__c</fullName>
    <formula>IF(Cost_Category_Type__c == &apos;GSA Assemblies&apos;, Location_Multiplier_Washington_DC_1_00__c,IF(Include_Location_Factor__c,Location_Multiplier_Washington_DC_1_00__c, 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>