force-app/main/default/objects/NCMT_DES_Items__c/fields/Location_Multiplier_Washington_DC_1_00__c.field-meta.xml
<CustomField>
    <fullName>Location_Multiplier_Washington_DC_1_00__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Adjusts the line item cost from the national average to the specific location for which the project will be built</inlineHelpText>
    <label>Location Multiplier</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>