force-app/main/default/objects/NCMT_DES_Items__c/fields/Markup_Method__c.field-meta.xml
<CustomField>
    <fullName>Markup_Method__c</fullName>
    <label>Markup Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>