force-app/main/default/objects/NCMT_DES_Items__c/fields/Material_Adj__c.field-meta.xml
<CustomField>
    <fullName>Material_Adj__c</fullName>
    <formula>Quantity__c * (1 + Waste_Factor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Adjusted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>