force-app/main/default/objects/NCMT_DES_Items__c/fields/Material_Assembly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Material_Assembly_Cost__c</fullName>
    <label>Assembly Material Cost/Unit</label>
    <summarizedField>NCMT_DES_Assembly_Details__c.Material_Unit_Cost_per_Quantity__c</summarizedField>
    <summaryForeignKey>NCMT_DES_Assembly_Details__c.NCMT_DES_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>