force-app/main/default/objects/NCMT_DES_Items__c/fields/MinID__c.field-meta.xml
<CustomField>
    <fullName>MinID__c</fullName>
    <label>MinID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>