force-app/main/default/objects/NCMT_DES_Items__c/fields/NCMT_Assembly_Master__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Assembly_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCMT Assembly Master</label>
    <referenceTo>NCMT_Assembly_Lookup_Detail__c</referenceTo>
    <relationshipLabel>NCMT DES Items</relationshipLabel>
    <relationshipName>NCMT_DES_Items</relationshipName>
    <type>Lookup</type>
</CustomField>