force-app/main/default/objects/NCMT_DES_Items__c/fields/NCMT_Contractor_ID__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Contractor_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCMT SubContractor</label>
    <referenceTo>NCMT_Contractor__c</referenceTo>
    <relationshipLabel>NCMT DES Items</relationshipLabel>
    <relationshipName>NCMT_DES_Items</relationshipName>
    <type>Lookup</type>
</CustomField>