force-app/main/default/objects/NCMT_DES_Items__c/fields/NCMT_Labor_Resources__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Labor_Resources__c</fullName>
    <formula>DES_Lookup_Detail__r.NCMT_Labor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCMT Labor Resources</label>
    <type>Text</type>
</CustomField>