force-app/main/default/objects/NCMT_DES_Items__c/fields/NCMT_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Project_ID__c</fullName>
    <formula>Project_Cost_Summary_ID__r.Project_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCMT Project ID</label>
    <type>Text</type>
</CustomField>