force-app/main/default/objects/NCMT_DES_Items__c/fields/NCMT_Project_Location__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Project_Location__c</fullName>
    <label>NCMT Project Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>