force-app/main/default/objects/NCMT_DES_Items__c/fields/NCMT_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Project_Name__c</fullName>
    <formula>Project_Cost_Summary_ID__r.Project_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCMT Project Name</label>
    <type>Text</type>
</CustomField>