force-app/main/default/objects/NCMT_DES_Items__c/fields/O_P_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>O_P_Total_Cost__c</fullName>
    <description>Sums all the O&amp;P cost from the NCMR DES Assembly Details for the specific quantity</description>
    <label>O&amp;P Total Cost</label>
    <summarizedField>NCMT_DES_Assembly_Details__c.O_P_Quantity_Cost__c</summarizedField>
    <summaryForeignKey>NCMT_DES_Assembly_Details__c.NCMT_DES_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>