force-app/main/default/objects/NCMT_DES_Items__c/fields/O_P_Unit_Total_Adj__c.field-meta.xml
<CustomField>
    <fullName>O_P_Unit_Total_Adj__c</fullName>
    <formula>IF( Markup_Method__c ==&apos;User Defined&apos;, In_house_Unit_Total_Adj__c,(O_P_Unit_Total__c * Quantity__c * Location_Multiplier_wf__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>O&amp;P Unit Total Adj</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>