force-app/main/default/objects/NCMT_DES_Items__c/fields/Original_Minimum_Cost__c.field-meta.xml
<CustomField>
    <fullName>Original_Minimum_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Original Minimum Cost</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>