force-app/main/default/objects/NCMT_DES_Items__c/fields/Project_Cost_Summary_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_Cost_Summary_ID__c</fullName>
    <label>Project Cost Summary ID</label>
    <referenceTo>NCMT_Project_Cost_Summary__c</referenceTo>
    <relationshipLabel>NCMT DES Items</relationshipLabel>
    <relationshipName>NCMT_DES_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>