force-app/main/default/objects/NCMT_DES_Items__c/fields/Project_Phasing__c.field-meta.xml
<CustomField>
    <fullName>Project_Phasing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Phasing</label>
    <referenceTo>NCMT_RA_Phasing__c</referenceTo>
    <relationshipLabel>NCMT DES Items</relationshipLabel>
    <relationshipName>NCMT_DES_Items</relationshipName>
    <type>Lookup</type>
</CustomField>