force-app/main/default/objects/NCMT_DES_Items__c/fields/Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>An allowance for taxes against material and equipment as required by different jurisdictions.</inlineHelpText>
    <label>Sales Tax %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>