force-app/main/default/objects/NCMT_DES_Items__c/fields/SubContractor_Bond__c.field-meta.xml
<CustomField>
    <fullName>SubContractor_Bond__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The rate required for a surety to pay one party a certain amount if a second party fails to meet obligations.</inlineHelpText>
    <label>SubContractor Bond &amp; Insurance %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>