force-app/main/default/objects/NCMT_DES_Items__c/fields/SubContractor_Overhead__c.field-meta.xml
<CustomField>
    <fullName>SubContractor_Overhead__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Represents the subcontractor’s home office and jobsite overheads.</inlineHelpText>
    <label>Subcontractor Overhead %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>