force-app/main/default/objects/NCMT_DES_Items__c/fields/SubContractor_Profit__c.field-meta.xml
<CustomField>
    <fullName>SubContractor_Profit__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Represents the financial benefit the subcontractor will gain for services rendered.</inlineHelpText>
    <label>SubContractor Profit %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>