force-app/main/default/objects/NCMT_DES_Items__c/fields/Total_Assembly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Assembly_Cost__c</fullName>
    <formula>(  Installation_Assembly_Cost__c +    Total_Material_Cost_w_Sales_Tax__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Assembly Direct Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>