force-app/main/default/objects/NCMT_DES_Items__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>(
 (
  (
   CASE
      (Markup_Method__c,&quot;GSA Markups&quot;,		
          IF(Material_Unit_Cost__c + Equipment_Rental_Day__c + Hourly_Rate__c == 0, 
            (In_house_Unit_Total_Adj__c),
	    (Total_Material_Cost_w_Sales_Tax__c +Total_Equipment_Cost_w_Sales_Tax__c + 
             Total_Labor_Premium__c )
       ), 			
      &quot;User Defined&quot;, In_house_Unit_Total_Adj__c,
      &quot;RSMeans - O&amp;P&quot;, (O_P_Unit_Total__c * Quantity__c * Location_Multiplier_wf__c), null
     ) *
	(1+SubContractor_Overhead__c)
   ) *
	(1+SubContractor_Profit__c)
  ) *
	(1+SubContractor_Bond__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost w. Subcon. Markups</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>