force-app/main/default/objects/NCMT_DES_Items__c/fields/Total_Cost_w_o_Subcon__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_w_o_Subcon__c</fullName>
    <formula>if(NCMT_Contractor_ID__c!=&apos;&apos;, 0, IF( Markup_Method__c != &apos;GSA Markups&apos;, Total_Cost__c,Total_Direct_Cost__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost w/o Subcon.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>