force-app/main/default/objects/NCMT_DES_Items__c/fields/Total_Equip_O_P_Cost_Adj__c.field-meta.xml
<CustomField>
    <fullName>Total_Equip_O_P_Cost_Adj__c</fullName>
    <formula>IF(Item_Type__c==&apos;Assemblies&apos;, ( Equipment_Assembly_Cost__c),((DES_Lookup_Detail__r.Equipment_Unit_O_P_Cost__c ))) * Location_Multiplier_wf__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Equip O&amp;P Cost Adj</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>