force-app/main/default/objects/NCMT_DES_Items__c/fields/Total_Equipment_Premium__c.field-meta.xml
<CustomField>
    <fullName>Total_Equipment_Premium__c</fullName>
    <description>Total Equipment Inc Equipment Project Premium Markup.</description>
    <formula>Total_Equip_Cost_Adj__c * ( Equipment_Project_Premium_Markup__c  + 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Equipment Inc Equipment Project Premium Markup.</inlineHelpText>
    <label>Total Equipment Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>