force-app/main/default/objects/NCMT_DES_Items__c/fields/Total_In_House_Total_Adj_f__c.field-meta.xml
<CustomField>
    <fullName>Total_In_House_Total_Adj_f__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Populated from workflow</description>
    <label>Total In House Total Adj wf</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>