force-app/main/default/objects/NCMT_DES_Items__c/fields/Total_Labor_Cost1__c.field-meta.xml
<CustomField>
    <fullName>Total_Labor_Cost1__c</fullName>
    <formula>(((Total_Labor_Cost_w_Labor_Burden_Tax__c * (1 +  SubContractor_Overhead__c))* (1 + SubContractor_Profit__c ))*(1 +  SubContractor_Bond__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Labor Cost w. Subcon. Markups</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>