force-app/main/default/objects/NCMT_DES_Items__c/fields/Total_Labor_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Labor_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Labor Cost (MinID)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>