force-app/main/default/objects/NCMT_DES_Items__c/fields/Total_Labor_Cost_Adj__c.field-meta.xml
<CustomField>
    <fullName>Total_Labor_Cost_Adj__c</fullName>
    <formula>IF( Item_Type__c == &apos;Assemblies&apos;, IF(Minimum_Cost__c &gt;0 &amp;&amp; ( Markup_Method__c !=&apos;RSMeans - O&amp;P&apos;)&amp;&amp;(( Total_Labor_Cost__c) &lt; Original_Minimum_Cost__c ),
Minimum_Cost__c,(Location_Multiplier_wf__c * Labor_Assembly_Cost__c * Quantity__c)), ( Adj_Labor_Unit_Cost__c * Quantity__c * Location_Multiplier_wf__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For GSA Assemblies, total calculated labor cost is less than minimum cost, then minimum cost of labor is used in estimates</inlineHelpText>
    <label>Total Labor Cost Adj</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>