force-app/main/default/objects/NCMT_DES_Items__c/fields/Total_Labor_Cost_w_Labor_Burden_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Labor_Cost_w_Labor_Burden_Tax__c</fullName>
    <formula>Total_Labor_Cost_Adj__c * (1+  Labor_Burden_Tax__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Labor Cost w. Labor Burden Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>