force-app/main/default/objects/NCMT_DES_Items__c/fields/Total_Material_Cost_Adj__c.field-meta.xml
<CustomField>
    <fullName>Total_Material_Cost_Adj__c</fullName>
    <formula>IF(Item_Type__c ==&apos;Assemblies&apos;, (Material_Assembly_Cost__c * Quantity__c),((Material_Adj__c * Material_Unit_Cost__c))) * Location_Multiplier_wf__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Material Cost Adj</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>